tests/checker/diagnostics/0069_core_if_branch_mismatch_06.ml.infer.expected
File "0069_core_if_branch_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0069_core_if_branch_mismatch_06 is not a valid module name.

File "0069_core_if_branch_mismatch_06.ml", line 1, characters 29-34:
1 | let _ = if false then 5 else false
                                 ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
