tests/checker/diagnostics/0069_core_if_branch_mismatch_06.ml
let _ = if false then 5 else false
